# MaxFirmata

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  MaxFirmata.sln  MaxFirmata.vcxproj  MaxFirmata.vcxproj.filters  MaxFirmata25.maxhelp  MaxFirmata25Usage.maxpat  MaxFirmata25Win64.mxf  README.md
Package/maxfirmata/: package-info.json
Package/maxfirmata/docs/refpages/: maxfirmata.maxref.xml
Package/maxfirmata/help/: maxfirmata.maxhelp
libs/max/: README.md
source/: I2CReply.js  I2CSend.js  MaxFirmata25.maxpat  analogWrite.js  digitalWrite.js  encoderResponse.js  pinMode.js  response.js  serialConfig.js  serialPrint.js  serialPrintln.js  serialRead.js  stepperConfig.js  stepperStep.js  stringMessage.js
src/: maxfirmata.c
